--- a/package.json
+++ b/package.json
@@ -19,10 +19,16 @@
     "rimraf": "~5.0",
     "ts-api-utils": "~1.3",
     "ts-jest": "~29.1",
-    "typescript": "~5.4"
+    "typescript": "~5.4",
+    "@langchain/community": "^0.2.25",
+    "@langchain/core": "^0.2.23",
+    "@langchain/ollama": "^0.0.4",
+    "langchain": "^0.2.15",
+    "nodemon": "3.1.4"
   },
   "scripts": {
     "start": "node build/src/main.js",
+    "dev": "nodemon --exec tsx ./src/main.ts",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
     "build": "tsc -p tsconfig.json",
